[package]
name = "opcode0x90"
version = "0.1.0"
authors = ["opcode0x90 <opcode0x90.nop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"
bench = false

[[bin]]
name = "aoc"
path = "src/main.rs"
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
